--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,10 +4,14 @@ buildscript {
         google()
         mavenCentral()
     }
-
+   
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"       
     }
+}
+
+plugins {
+        id 'com.google.gms.google-services' version '4.4.0' apply false
 }
 
 allprojects {
